--- a/style.css
+++ b/style.css
@@ -293,3 +293,185 @@ nav ul li a{
 .signup-form > button:hover{
     background-color: #142a43;
 }
+
+/*index.php page CSS */
+.banner{
+    background-image: url('Images/banner-background.jpg');
+    background-size: cover;
+    color: white;
+    background-color: rgba(9, 9, 10, .89);;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding: 150px 20px;
+    position: relative;
+}
+
+.banner-content{
+    max-width:800px;
+    margin: 0 auto;
+}
+
+.banner-content h1{
+    font-size: 3em;
+    margin-bottom: 20px;
+}
+
+.banner-nav{
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    right: 60px;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+.banner-nav a{
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 2em;
+    border-radius: 50%;
+}
+
+.banner-nav a:hover{
+    background-color: rgba(0,0,0,0.8);
+}
+
+
+.btn-services{
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #99D3E1;
+    color: white;
+    text-decoration: none;
+    border-radius: 15px;
+}
+
+.why-choose-us,
+.testimonials,
+.team{
+    padding: 40px 20px;
+    text-align: center;
+    background-color: #f7f7f7;
+}
+
+.our-services-section{
+    padding: 40px 20px;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    background-color: #f7f7f7;
+}
+
+.service, .testimonial, .team-member{
+    margin: 20px;
+    display: inline-block;
+    vertical-align: top;;
+}
+
+.why-choose-us .text-p, .team-p  {
+    color: #99D3E1;
+    margin-bottom: 10px;
+    font-size: 1.7em;
+}
+.why-choose-us h2, .team h2 {
+    font-size: 2em;
+    color: #0c0078;
+    margin-bottom: 40px;
+}
+
+.features {
+    display: flex;
+    justify-content: space-around;
+}
+
+.feature {
+    width: 25%;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    text-align: center;
+}
+
+.service img, .feature img, .team-member img {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+}
+
+.service h3, .feature h3, .team-member h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    color: #142a43;
+}
+
+.feature p {
+    font-size: 1em;
+    color: #666;
+}
+
+.testimonial {
+    width: 300px;
+}
+
+.testimonial p {
+    font-style: italic;
+}
+
+.about-us{
+    background-color: #f7f7f7;
+    padding: 40px 20px;
+}
+
+.about-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.about-content img{
+    width: 100%;
+    max-width: 400px;
+    margin-right: 30px;
+}
+
+.about-text{
+    max-width: 600px;
+}
+
+.about-text h2, .why-choose-us h2{
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #0c0078;
+}
+
+.about-text ul{
+    list-style: none;
+    padding: 10px;
+}
+
+.about-text ul li{
+    margin-bottom: 10px;
+}
+
+
+.about-text .btn-contact {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #99D3E1;
+    color: white;
+    text-decoration: none;
+    border-radius: 15px;
+}
+
+.about-text-p, .text-p{
+    color:  #99D3E1;
+    text-decoration: solid;
+
+}
