--- a/style.css
+++ b/style.css
@@ -1,48 +1,59 @@
-body{
+body {
     margin: 0;
     width: 100%;
     overflow-x: hidden;
     font-family: 'Kaisei Opti';
     box-sizing: border-box;
+
 }
 
+
 /*Login Page*/
-.login-container{
+.login-container {
     display: flex;
 }
-.login-image{
+
+.login-image {
     flex: 50%;
 }
-.login-image > img{
+
+.login-image>img {
     width: 100%;
     height: 830px;
 }
-.login-text{
+
+.login-text {
     flex: 50%;
     text-align: center;
     line-height: 50px;
     margin-top: 50px;
 }
-.login-text > h1{
+
+.login-text>h1 {
     font-size: 55px;
     color: #142a43;
 }
-.login-form{
+
+.login-form {
     padding: 8px 100px;
 }
-.login-form > h3{
+
+.login-form>h3 {
     font-size: 30px;
     color: #142a43;
 }
-.login-form > a{
+
+.login-form>a {
     color: #1F426B;
     font-size: 17px;
 }
-.login-form > a:hover{
+
+.login-form>a:hover {
     color: #142a43;
     font-weight: bold;
 }
-.login-form > input[type=email]{
+
+.login-form>input[type=email] {
     width: 100%;
     padding: 0px 20px;
     margin: 18px 0;
@@ -50,7 +61,7 @@ body{
     border: 2px solid silver;
 }
 
-.login-form > input[type=password]{
+.login-form>input[type=password] {
     width: 100%;
     padding: 0px 20px;
     margin: 18px 0;
@@ -58,7 +69,7 @@ body{
     border: 2px solid silver;
 }
 
-.login-form > button{
+.login-form>button {
     width: 50%;
     background-color: #1F426B;
     color: white;
@@ -67,38 +78,46 @@ body{
     font-size: 20px;
     border-radius: 6px;
 }
-.login-form > button:hover{
+
+.login-form>button:hover {
     background-color: #142a43;
 }
 
 
 /*Forgot Passsword Page*/
-.fpassword-container{
+.fpassword-container {
     display: flex;
 }
-.fpassword-image{
+
+.fpassword-image {
     flex: 50%;
 }
-.fpassword-image > img{
+
+.fpassword-image>img {
     width: 100%;
     height: 830px;
 }
-.fpassword-text{
+
+.fpassword-text {
     flex: 50%;
     text-align: center;
     line-height: 50px;
     margin-top: 50px;
 }
-.fpassword-text > h1{
+
+.fpassword-text>h1 {
     font-size: 55px;
 }
-.fpassword-form{
+
+.fpassword-form {
     padding: 68px 30px;
 }
-.fpassword-form > h3{
+
+.fpassword-form>h3 {
     font-size: 22px;
 }
-.fpassword-form > input[type=email] {
+
+.fpassword-form>input[type=email] {
     width: 80%;
     padding: 0px 20px;
     margin: 18px 0;
@@ -106,7 +125,7 @@ body{
     border: 2px solid silver;
 }
 
-.fpassword-form > button{
+.fpassword-form>button {
     width: 40%;
     background-color: #1F426B;
     color: white;
@@ -115,39 +134,40 @@ body{
     font-size: 20px;
     border-radius: 6px;
 }
-.fpassword-form > button:hover{
+
+.fpassword-form>button:hover {
     background-color: #142a43;
 }
 
 /*Header.php css*/
 
-.textStyling{
+.textStyling {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.headerClass{
+.headerClass {
     background-color: #ffffff;
     border-bottom: 1px solid #dcdcdc;
     padding: 10px 20px;
 }
 
-.headerContainer{
+.headerContainer {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
 }
 
-.logo img{
+.logo img {
     height: 110px;
 }
 
-nav{
+nav {
     flex: 1;
 }
 
-nav ul{
+nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -155,17 +175,43 @@ nav ul{
     justify-content: flex-start;
 }
 
-nav ul li{
+nav ul li {
     margin: 0 15px;
+    position: relative;
 }
 
-nav ul li a{
+nav ul li a {
     text-decoration: none;
     color: #000;
     font-weight: bold;
+    display: block;
 }
 
-.login .login-btn{
+.nav-dropdown {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.nav-dropdown a {
+    color: black;
+    padding: 20px 20px;
+    text-align: none;
+}
+
+.nav-dropdown a:hover {
+    background-color: #f1f1f1;
+    color: #99D3E1;
+}
+
+nav ul li:hover .nav-dropdown {
+    display: block;
+}
+
+
+.login .login-btn {
     background-color: #2D3A5C;
     color: #ffffff;
     padding: 10px 20px;
@@ -174,13 +220,13 @@ nav ul li a{
     font-weight: bold;
 }
 
-.login .login-btn:hover{
+.login .login-btn:hover {
     background-color: #142a43;
 }
 
 /*footer.php styles*/
 
-.footerContainer{
+.footerContainer {
     background-color: black;
     color: white;
     padding: 20px 0;
@@ -190,93 +236,101 @@ nav ul li a{
     width: 100%;
 }
 
-.footerContainer .footer-content{
+.footerContainer .footer-content {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     text-align: left;
 }
 
-.footerContainer .footer-content .section{
+.footerContainer .footer-content .section {
     margin: 20px;
     flex: 1;
     min-width: 200px;
 }
 
-.footerContainer .footer-content .section img{
+.footerContainer .footer-content .section img {
     display: block;
     margin: 0 auto 10px auto;
 }
 
-.footerContainer .footer-content .section h3{
+.footerContainer .footer-content .section h3 {
     margin-bottom: 11px;
 }
 
-.footerContainer .footer-content .section p{
+.footerContainer .footer-content .section p {
     margin: 10px 0;
     text-align: center;
 }
 
-.footerContainer .footer-content .section ul{
+.footerContainer .footer-content .section ul {
     list-style: none;
     padding: 0;
 }
 
-.footerContainer .footer-content .section ul li{
+.footerContainer .footer-content .section ul li {
     margin: 5px 0;
 }
 
-.footerContainer .footer-content .section ul li a{
+.footerContainer .footer-content .section ul li a {
     color: white;
     text-decoration: none;
 }
 
-.footerContainer .footer-content .section ul li a:hover{
+.footerContainer .footer-content .section ul li a:hover {
     text-decoration: underline;
 }
 
-.footerContainer .footer-bottom{
+.footerContainer .footer-bottom {
     margin-top: 22px;
     font-size: 14px;
 }
 
 /*Sign-Up Page*/
-.signup{
+.signup {
     margin-top: 50px;
 }
-.signup > h1{
+
+.signup>h1 {
     text-align: center;
     color: #142a43;
 }
 
-.signup-text{
+.signup-text {
     margin-top: 20px;
 }
 
-.signup-container{
+.signup-container {
     display: flex;
     flex-wrap: nowrap;
     padding: 0px 200px;
 }
-.signup-container > div{
+
+.signup-container>div {
     border: 1px solid black;
     padding: 20px;
     margin: 30px;
     border-radius: 10px;
 }
-.signup-container > div img{
+
+.signup-container>div img {
     width: 100%;
     border-radius: 10px;
 }
-.signupForm{
+
+.signupForm {
     margin: 50px 390px;
 }
-.signup-form > h1{
+
+.signup-form>h1 {
     text-align: center;
     color: #142a43;
     margin-top: 20px;
 }
-.signup-form > input[type=email], input[type=password], input[type=text] {
+
+.signup-form>input[type=email],
+input[type=password],
+input[type=text] {
     width: 100%;
     padding: 15px 20px;
     margin: 18px 0;
@@ -284,7 +338,7 @@ nav ul li a{
     border: 2px solid silver;
 }
 
-.signup-form > button{
+.signup-form>button {
     width: 30%;
     background-color: #1F426B;
     color: white;
@@ -295,34 +349,43 @@ nav ul li a{
     border-radius: 6px;
 }
 
-.signup-form > button:hover{
+.signup-form>button:hover {
     background-color: #142a43;
 }
 
 /*index.php page CSS */
-.banner{
-    background-image: url('Images/banner-background.jpg');
+.banner {
+    background-image: url('Images/video-bg-2.jpg');
     background-size: cover;
     color: white;
-    background-color: rgba(9, 9, 10, .89);;
     text-align: center;
     height: 100%;
     width: 100%;
     padding: 150px 20px;
     position: relative;
+    overflow: hidden;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.banner-content{
-    max-width:800px;
+.banner-content {
+    max-width: 100%;
     margin: 0 auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.banner-content h1{
+.banner-content h1 {
     font-size: 3em;
     margin-bottom: 20px;
 }
 
-.banner-nav{
+.banner-nav {
     position: absolute;
     top: 50%;
     left: 20px;
@@ -332,7 +395,7 @@ nav ul li a{
     transform: translateY(-50%);
 }
 
-.banner-nav a{
+.banner-nav a {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     padding: 10px;
@@ -341,12 +404,12 @@ nav ul li a{
     border-radius: 50%;
 }
 
-.banner-nav a:hover{
-    background-color: rgba(0,0,0,0.8);
+.banner-nav a:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 
-.btn-services{
+.btn-services {
     margin-top: 10px;
     padding: 10px 20px;
     background-color: #99D3E1;
@@ -357,13 +420,13 @@ nav ul li a{
 
 .why-choose-us,
 .testimonials,
-.team{
+.team {
     padding: 40px 20px;
     text-align: center;
     background-color: #f7f7f7;
 }
 
-.our-services-section{
+.our-services-section {
     padding: 40px 20px;
     text-align: center;
     display: flex;
@@ -371,18 +434,24 @@ nav ul li a{
     background-color: #f7f7f7;
 }
 
-.service, .testimonial, .team-member{
+.service,
+.testimonial,
+.team-member {
     margin: 20px;
     display: inline-block;
-    vertical-align: top;;
+    vertical-align: top;
+    ;
 }
 
-.why-choose-us .text-p, .team-p  {
+.why-choose-us .text-p,
+.team-p {
     color: #99D3E1;
     margin-bottom: 10px;
     font-size: 1.7em;
 }
-.why-choose-us h2, .team h2 {
+
+.why-choose-us h2,
+.team h2 {
     font-size: 2em;
     color: #0c0078;
     margin-bottom: 40px;
@@ -402,13 +471,17 @@ nav ul li a{
     text-align: center;
 }
 
-.service img, .feature img, .team-member img {
+.service img,
+.feature img,
+.team-member img {
     width: 100px;
     height: 100px;
     margin-bottom: 20px;
 }
 
-.service h3, .feature h3, .team-member h3 {
+.service h3,
+.feature h3,
+.team-member h3 {
     font-size: 1.5em;
     margin-bottom: 10px;
     color: #142a43;
@@ -419,48 +492,41 @@ nav ul li a{
     color: #666;
 }
 
-.testimonial {
-    width: 300px;
-}
-
-.testimonial p {
-    font-style: italic;
-}
-
-.about-us{
+.about-us {
     background-color: #f7f7f7;
     padding: 40px 20px;
 }
 
-.about-content{
+.about-content {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 }
 
-.about-content img{
+.about-content img {
     width: 100%;
     max-width: 400px;
     margin-right: 30px;
 }
 
-.about-text{
+.about-text {
     max-width: 600px;
 }
 
-.about-text h2, .why-choose-us h2{
+.about-text h2,
+.why-choose-us h2 {
     font-size: 2em;
     margin-bottom: 20px;
     color: #0c0078;
 }
 
-.about-text ul{
+.about-text ul {
     list-style: none;
     padding: 10px;
 }
 
-.about-text ul li{
+.about-text ul li {
     margin-bottom: 10px;
 }
 
@@ -474,35 +540,303 @@ nav ul li a{
     text-decoration: none;
     border-radius: 15px;
 }
-.about-text-p, .text-p{
-    color:  #99D3E1;
+
+.about-text-p,
+.text-p {
+    color: #99D3E1;
     text-decoration: solid;
 
 }
 
+.testimonials {
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.testimonial-bg {
+    width: 50%;
+    position: relative;
+}
+
+.background-img {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+}
+
+.testimonial-content {
+    width: 50%;
+    padding: 40px;
+    box-sizing: border-box;
+}
+
+.testimonial-container {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+}
+
+.testimonial-slide {
+    min-width: 100%;
+    transition: transform 0.5s ease;
+    padding: 0 10px;
+}
+
+.testimonial-card {
+    background: #ffffff;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.testimonial-img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.role {
+    font-size: 0.9em;
+    color: #777;
+    margin: 5px 0;
+}
+
+.testimonial-text {
+    font-size: 0.9em;
+    margin: 10px 0;
+    ;
+}
+
+.stars {
+    color: #f39c12;
+}
+
+.testimonial-nav {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #ccc;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.dot.active {
+    background: #333;
+}
+
+.hidden {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
 /* Mobile screen for all the pages */
 @media only screen and (max-width: 768px) {
-    .login-container{
+    .login-container {
         flex-direction: column;
     }
-    .login-form{
+
+    .login-form {
         padding: 8px 20px;
     }
-    .fpassword-container{
+
+    .fpassword-container {
         flex-direction: column;
     }
-    .fpassword-form{
+
+    .fpassword-form {
         padding: 8px 10px;
     }
-    .signup-container{
+
+    .signup-container {
         flex-direction: column;
         flex-wrap: wrap;
         padding: 0;
     }
-    .signupForm{
+
+    .signupForm {
         margin: 0px 40px;
     }
-    .signup-form > button{
+
+    .signup-form>button {
         padding: 14px 0px;
     }
+
+    /*index.php styles for mobile view*/
+    nav {
+        display: none;
+    }
+
+
+    .our-services-section {
+        display: block;
+    }
+
+    .service {
+        width: 100%;
+        margin: 20px auto;
+    }
+
+    .our-services-section,
+    .about-us,
+    .why-choose-us,
+    .testimonials,
+    .team {
+        padding: 40px 20px;
+    }
+
+    .service,
+    .testimonial,
+    .team-member,
+    .feature {
+        width: 100%;
+        margin: 20px auto;
+        text-align: center;
+    }
+
+    .about-content img {
+        margin-right: 0;
+        margin-bottom: 20px;
+        display: flex;
+    }
+
+    .banner {
+        padding: 100px 20px;
+    }
+
+    .banner-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 90%;
+        max-width: 90%;
+    }
+
+
+    .banner-content h1 {
+        font-size: 1em;
+        margin-bottom: 10px;
+    }
+
+    .banner-content p {
+        font-size: 0.8em;
+        line-height: 1.5;
+        margin-bottom: 20px;
+    }
+
+    .banner-nav {
+        position: absolute;
+        
+    }
+
+    .banner-nav a {
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        padding: 10px;
+        font-size: 1.5em;
+        border-radius: 50%;
+        margin: 0 5px;
+    }
+
+    .banner-nav a:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .btn-services {
+        margin-top: 6px;
+        padding: 5px 10px;
+        background-color: #99D3E1;
+        color: white;
+        text-decoration: none;
+        border-radius: 15px;
+    }
+
+    .features {
+        display: block;
+    }
+
+    .feature {
+        width: 100%;
+        margin: 20px auto;
+        text-align: center;
+    }
+
+    .testimonial-bg {
+        display: none;
+    }
+
+    .testimonial-content {
+        padding: 20px;
+        width: 100%;
+    }
+
+    .testimonial-slide {
+
+        padding: 0 10px;
+    }
+
+    .testimonial-card {
+        margin: 10px 0;
+    }
+
+
+    .testimonial-img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .testimonial-card h3 {
+        font-size: 18px;
+        margin-bottom: 8px;
+    }
+
+    .testimonial-card .role {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+
+    .testimonial-text {
+        font-size: 14px;
+        line-height: 1.6;
+        margin-bottom: 15px;
+    }
+
+    .stars {
+        font-size: 24px;
+        color: #ffd700;
+        margin-top: 10px;
+    }
+
+    .testimonial-nav {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .testimonial-nav .dot {
+        width: 12px;
+        height: 12px;
+        margin: 0 5px;
+    }
+
+
+
 }
