--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     font-family: "Arsenal", sans-serif;
     font-weight: 400;
@@ -434,10 +435,19 @@ nav ul li:hover .nav-dropdown {
     border-radius: 15px;
 }
 
-.why-choose-us,
-.testimonials,
-.team {
-    padding: 40px 20px;
+.why-choose-us {
+    padding: 30px 20px;
+    text-align: center;
+    background-color: #f7f7f7;
+}
+.testimonials{
+    padding: 20px;
+    text-align: center;
+    background-color: #f7f7f7;
+}
+
+.team{
+    padding: 5px 10px;
     text-align: center;
     background-color: #f7f7f7;
 }
@@ -449,10 +459,16 @@ nav ul li:hover .nav-dropdown {
     justify-content: space-around;
     background-color: #f7f7f7;
 }
+.team-member {
+    max-width: 300px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    margin: 60px;
+}
 
 .service,
-.testimonial,
-.team-member {
+.testimonial{
     margin: 20px;
     display: inline-block;
     vertical-align: top;
@@ -488,10 +504,17 @@ nav ul li:hover .nav-dropdown {
 }
 
 .service img,
-.feature img,
-.team-member img {
+.feature img{
     width: 100px;
     height: 100px;
+    margin-bottom: 20px;
+}
+
+.team-member img{
+    width: auto; 
+    height: auto; 
+    max-width: 400px;  
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     margin-bottom: 20px;
 }
 
@@ -566,7 +589,7 @@ nav ul li:hover .nav-dropdown {
 
 .testimonials {
     display: flex;
-    height: 100vh;
+    height: 70vh;
     overflow: hidden;
 }
 
@@ -583,7 +606,7 @@ nav ul li:hover .nav-dropdown {
 
 .testimonial-content {
     width: 50%;
-    padding: 40px;
+    padding: 30px;
     box-sizing: border-box;
 }
 
@@ -660,6 +683,50 @@ nav ul li:hover .nav-dropdown {
     transform: translateY(0);
 }
 
+.scrolling-animation {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    background-color: #430660;
+    color: white;
+    padding: 30px;
+}
+
+.animation-container {
+    display: flex;
+    white-space: nowrap;
+    animation: scroll-left-right 2s linear infinite;
+}
+
+.animation-container ul {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.animation-container li {
+    flex: none;
+    padding: 0 20px;
+    margin-right: 16%;
+    font-size: 32px;
+    line-height: 32px;
+    font-weight: 700;
+}
+
+@keyframes scroll-left-right {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-10px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+
 /* User Profile Setup code */
 .userProfileForm> h1{
     text-align: center;
@@ -707,9 +774,158 @@ nav ul li:hover .nav-dropdown {
     border-radius: 6px;
 }
 
+/*contact us page*/
+
+.contact-us {
+    display: flex;
+    justify-content: space-between;
+    padding: 26px;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.contact-info {
+    flex: 1;
+    max-width: 35%;
+    margin-top: 2.5%;
+    margin-left: 2%;
+}
+
+.contact-info-item {
+    background-color: #FAF9FB;
+    margin-bottom: 28px;
+    margin-left: 2px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.contact-info-item h3 {
+    margin: 0;
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-family: Josefin Sans;
+}
+
+.contact-info-item p {
+    margin: 0;
+    font-size: 16px;
+    font-family: Josefin Sans;
+}
+
+.contact-form {
+    flex: 1;
+    max-width: 60%;
+    padding: 10px;
+}
+
+.contact-form h2 {
+    font-size: 20px;
+    margin: 2%;
+    font-family: Josefin Sans;
+}
+
+.contact-form h3 {
+    font-size: 40px;
+    font-family: Josefin Sans;
+    color: #99D3E1; 
+    margin-top: 0%;
+    margin-bottom: 1%;
+    margin-left: 2%;
+    
+}
+
+.contact-form form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+.contact-form input, .contact-form textarea {
+    width: 10%;
+    padding: 16px;
+    border: 1px solid #f9f7f7;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: #FAF9FB;
+}
+
+.contact-form input[type="text"]{
+    width: calc(40% - 10px);
+    border: 1px solid #f9f7f75e;
+    color: black;
+}
+
+.contact-form input[type="email"]{
+    padding: 15px 20px;
+    margin: 18px 0;
+    border-radius: 4px;
+    border: 1px solid #f9f7f7;
+    width: calc(40% - 10px);
+    background-color: #FAF9FB;
+}
+
+.contact-form textarea {
+    width: 100%;
+    resize: vertical;
+    height: 100px;
+}
+
+.contact-form .form-footer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.contact-form .form-footer p {
+    font-size: 14px;
+    white-space: nowrap;
+}
+
+.form-footer p {
+    margin: 0px 40px 30px 0px;
+}
+
+.contact-form button {
+    background-color: #2D3A5C;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 100%;
+
+}
+
+.contact-form button:hover {
+    background-color: #001833;
+}
+
+.contact-form input, .contact-form textarea {
+    background-color: #f8f8f8;
+}
+
+.contact-form input::placeholder, .contact-form textarea::placeholder {
+    color: #bfbfbf;
+}
+
+.map-container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.map-container h2 {
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-family: Josefin Sans;
+}
+
 
 /* Mobile screen for all the pages */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 800px) {
     .login-container {
         flex-direction: column;
     }
@@ -771,10 +987,17 @@ nav ul li:hover .nav-dropdown {
 
     .our-services-section,
     .about-us,
-    .why-choose-us,
-    .testimonials,
-    .team {
-        padding: 40px 20px;
+    .why-choose-us{
+        padding: 40px;
+    }
+
+    .testimonials{
+        padding: 30px;
+        height: auto;
+    }
+
+    .team{
+        padding: 20px;
     }
 
     .service,
@@ -784,6 +1007,23 @@ nav ul li:hover .nav-dropdown {
         width: 100%;
         margin: 20px auto;
         text-align: center;
+        display: block;
+    }
+    .team-member img {
+        width: auto; 
+        height: auto; 
+        max-width: 80%; 
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+        margin-bottom: 20px;
+    }
+    .team-member h3 {
+        font-size: 1.2em; 
+        margin-bottom: 10px;
+    }
+
+    .team-member p {
+        font-size: 1em; 
+        color: #666;
     }
 
     .about-content img {
@@ -794,6 +1034,7 @@ nav ul li:hover .nav-dropdown {
 
     .banner {
         padding: 100px 20px;
+        width: auto;
     }
 
     .banner-content {
@@ -913,6 +1154,83 @@ nav ul li:hover .nav-dropdown {
         margin: 0 5px;
     }
 
+    /*contact us page */
+    .contact-us {
+        flex-direction: column;
+        padding: 10px;
+    }
+    
+    .contact-info {
+        max-width: 100%;
+        margin-top: 20px;
+        margin-left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+    
+    .contact-info-item {
+        width: 100%; 
+        max-width: 600px; 
+        margin-bottom: 20px; 
+        text-align: center; 
+    }
+    
+    .contact-form {
+        max-width: 100%;
+        padding: 10px;
+    }
+    
+    .contact-form h2, .contact-form h3 {
+        margin: 10px;
+        text-align: center;
+    }
+    
+    .contact-form form {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    
+    .contact-form input[type="text"], 
+    .contact-form input[type="email"],
+    .contact-form textarea {
+        width: calc(100% - 20px);
+        margin: 5px auto;
+    }
+    
+    .contact-form button {
+        width: 100%;
+        padding: 15px;
+    }
+    
+    .map-container {
+        margin: 20px auto;
+    }
+    .ban-nav{
+        width: auto;
+        padding: 35px;
+    }
 
+    /*footer mobile view*/
+    .footerContainer {
+        text-align: center; 
+    }
+
+    .footerContainer .footer-content {
+        flex-direction: column; 
+        align-items: center; 
+        text-align: center; 
+    }
+
+    .footerContainer .footer-content .section {
+        margin: 20px 0; 
+        flex: 1;
+        min-width: 200px; 
+    }
+
+    .footerContainer .footer-content .section img {
+        margin: 0 auto 10px; 
+    }
 
 }
