--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ nav ul li:hover .nav-dropdown {
     font-size: 14px;
 }
 
-/*Sign-Up Page*/
+/*User Sign-Up Page as well as Expert Signup Page*/
 .signup, .usrprofile {
     margin-top: 50px;
 }
