--- a/style.css
+++ b/style.css
@@ -487,6 +487,17 @@ input[type=text] {
         padding: 14px 0px;
     }
 
+    .login-btn {
+        background-color: #2D3A5C;
+        color: #ffffff;
+        padding: 10px 20px;
+        border-radius: 20px;
+        text-decoration: none;
+        font-weight: bold;
+        width: auto;
+    }
+    
+
     /*footer mobile view styles*/
     .footerContainer {
         text-align: center;
