--- a/healingStories.css
+++ b/healingStories.css
@@ -32,7 +32,7 @@ footer * {
     transform: translate(-50%, -50%);
     font-size: 2.5vw;
     font-weight: bold;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    color: #2d3a5c;
 }
 
 .stories-container {
